# ChangeLog for dev-lang/ghc
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.46 2004/11/22 15:24:17 kosmikus Exp $

  22 Nov 2004; Andres Loeh <kosmikus@gentoo.org> +files/ghc-updater,
  ghc-6.2.2.ebuild:
  Modified ebuild to use ghc-package.eclass (bug #69270) and to include
  ghc-updater script (bug #69142).

  26 Oct 2004; Andres Loeh <kosmikus@gentoo.org> ghc-6.2.2.ebuild:
  Modified CFLAG testing code, following discussion in bug #59709.

  24 Oct 2004; Matthieu Sozeau <mattam@gentoo.org> ghc-6.2.2.ebuild:
  Tested on ppc.

*ghc-6.2.2 (18 Oct 2004)

  18 Oct 2004; Andres Loeh <kosmikus@gentoo.org> ghc-6.0.ebuild,
  ghc-6.2.1-r1.ebuild, ghc-6.2.1.ebuild, ghc-6.2.2.ebuild:
  New version. Included mattam's fix for #59709. Removed some old versions.

  19 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> ghc-6.0.1.ebuild,
  ghc-6.0.ebuild, ghc-6.2-r1.ebuild, ghc-6.2.1-r1.ebuild, ghc-6.2.1.ebuild,
  ghc-6.2.ebuild:
  Fixed missing dependencies; bug #68021.

  24 Sep 2004; <SeJo@gentoo.org> ghc-6.2.ebuild:
  stable bump due to bug 59753

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> ghc-6.0.1.ebuild,
  ghc-6.0.ebuild, ghc-6.2-r1.ebuild, ghc-6.2.1-r1.ebuild, ghc-6.2.1.ebuild,
  ghc-6.2.ebuild:
  virtual/glibc -> virtual/libc

*ghc-6.2.1-r1 (15 Jun 2004)

  15 Jun 2004; Andres Loeh <kosmikus@gentoo.org> ghc-6.2.1-r1.ebuild,
  files/ghc-6.2.1-linker.patch.bz2:
  Patch for ghci's linker to help loading HOpenGL. Thanks to Sven Panne.

  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> ghc-6.0.1.ebuild,
  ghc-6.0.ebuild, ghc-6.2-r1.ebuild, ghc-6.2.1.ebuild, ghc-6.2.ebuild:
  Fix use invocation

  18 May 2004; Mamoru KOMACHI <usata@gentoo.org> ghc-6.0.1.ebuild,
  ghc-6.0.ebuild, ghc-6.2-r1.ebuild, ghc-6.2.1.ebuild, ghc-6.2.ebuild:
  Changed app-text/tetex to virtual/tetex.

  13 May 2004; Andres Loeh <kosmikus@gentoo.org> ghc-6.2.1.ebuild: