@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/ghc
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.46 2004/11/22 15:24:17 kosmikus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.47 2004/11/24 15:03:04 kosmikus Exp $
+
+  24 Nov 2004; Andres Loeh <kosmikus@gentoo.org> ghc-6.2.2.ebuild:
+  Added ~amd64 flag, cf. bug #58588.
 
   22 Nov 2004; Andres Loeh <kosmikus@gentoo.org> +files/ghc-updater,
   ghc-6.2.2.ebuild:
